# ssm-file

./: README.md  ssm.bash
sscp/: Cargo.toml
sscp/src/: main.rs  s3.rs  transfer.rs
terrform/: .gitignore  ec2.tf  main.tf  network.tf  s3.tf  terraform.tfstate
